synopsis: ""
description:
"""
"""
opam-version: "2.0"
maintainer: "dedukti-dev@inria.fr"
bug-reports: "https://github.com/Deducteam/logipedia/issues"
homepage: "https://github.com/Deducteam/logipedia"
dev-repo: "git+https://github.com/Deducteam/logipedia.git"
authors: []
license: "CeCILL 2.1"

depends: [
  "ocaml"        {         >= "4.04.0" }
  "dune"         { build & >= "1.3.0"  }
  "menhir"
]

build: [ [ "dune" "build" "-p" name "-j" jobs ] ]
