synopsis: "An interoperability tool between several proof systems"
description:
"""
Logipedia is a toolkit from translating proofs from one system to another (currently HOL-Light, Coq, Matita, Lean and PVS), based on the logical framework Dedukti.
"""
opam-version: "0.1"
maintainer: "dedukti-dev@inria.fr"
bug-reports: "https://github.com/Deducteam/Logipedia/issues"
homepage: "http://logipedia.inria.fr"
dev-repo: "git+https://github.com/Deducteam/Logipedia"
authors: [
  "François Thiré <francois.thire@lsv.fr>"
  "Gabriel Hondet <gabriel.hondet@inria.fr>"
  "Emilie Grienenberger <emilie.grienenberger@lsv.fr>"
]
license: "CeCILL"
depends: [
  "ocaml"        { >= "4.04.0" }
  "mongo"
  "dedukti"
]
build: [ [ "dune" "build" "-p" name "-j" jobs ] ]
