[metadata]
name = logigen
description = "Static website generator for the Logipedia project"
version = 0.0.1

[options]
python_requires = >= 3.7
packages = find:
install_requires = 
    Jinja2==2.10.1
    click==7.0
    sqlite-utils==1.11
    peewee==3.11.2
    tqdm==4.36.1
include_package_data = true

[options.extras_require]
dev =
    black
    pre-commit

[options.entry_points]
console_scripts =
    logigen = logigen:create_static_website
    logigen-create-db = logigen:create_database
