(executable
  (name logipedia)
  (public_name logipedia)
  (modules logipedia)
  (libraries logipedia.hollight logipedia.pvs logipedia.lean
  logipedia.export logipedia.core logipedia.sttfa))

(executable
  (name dk2json)
  (public_name dk2json)
  (modules dk2json)
  (libraries logipedia.json logipedia.core))
