(executable
  (name logipedia)
  (public_name logipedia)
  (modules logipedia)
  (libraries
    logipedia.hollight logipedia.pvs logipedia.lean logipedia.coq
    logipedia.matita logipedia.export logipedia.core logipedia.sttfa))

(executable
  (name dk2json)
  (public_name dk2json)
  (modules dk2json)
  (libraries logipedia.json))

;(executable
;  (name sttfa2pvs)
;  (public_name sttfa2pvs)
;  (modules pvs sttfa2pvs)
;  (libraries logipedia.core logipedia.sttfa))
