(executable
  (name logipedia)
  (public_name logipedia)
  (modules logipedia)
  (libraries logipedia.export logipedia.middleware logipedia.makefile logipedia.core logipedia.sttfa))

(executable
  (name dk2json)
  (public_name dk2json)
  (modules dk2json)
  (libraries logipedia.json logipedia.core))
