(include_subdirs unqualified)
(library
  (name sttfa)
  (public_name logipedia.sttfa)
  (synopsis "Export Logipedia libraries in the STTfa system.")
  (modules pvs ast compile compile_proof compile_term compile_type decompile
           sttfadk sttfatyping export environ
           coq lean matita openstt opentheory holstt hollight)
  (libraries logipedia.core))